--- a/bigbluebutton-html5/imports/ui/components/loading-screen/styles.css
+++ b/bigbluebutton-html5/imports/ui/components/loading-screen/styles.css
@@ -4,8 +4,9 @@ body{
   display: flex;
   flex-flow: column;
   justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 300%;
+  height: 100%;
   background-color: #ECF3FC;
 }
 
@@ -15,7 +16,7 @@ body{
   margin: 0 auto;
   position: absolute;
   justify-content: center;
-
+  max-width: 50%;
   left: 0;
   right: 0;
 }
