--- a/bigbluebutton-html5/imports/ui/components/loading-screen/styles.css
+++ b/bigbluebutton-html5/imports/ui/components/loading-screen/styles.css
@@ -16,7 +16,8 @@ body{
   margin: 0 auto;
   position: absolute;
   justify-content: center;
-  max-width: 50%;
+  width: 100%;
+  height: 100%;
   left: 0;
   right: 0;
 }
