--- a/bigbluebutton-html5/imports/ui/components/loading-screen/styles.css
+++ b/bigbluebutton-html5/imports/ui/components/loading-screen/styles.css
@@ -4,7 +4,6 @@ body{
   display: flex;
   flex-flow: column;
   justify-content: center;
-  align-items: center;
   width: 100%;
   height: 100%;
   background-color: #ECF3FC;
@@ -13,10 +12,10 @@ body{
 .arrow-container{
   width: 300px;
   height: 300px;
-  margin: 0 auto;
+  margin-bottom: 1rem;
   position: absolute;
   justify-content: center;
-
+  text-align: center;
   left: 0;
   right: 0;
 }
@@ -108,8 +107,4 @@ body{
 .zoomIn {
   -webkit-animation-name: zoomIn;
           animation-name: zoomIn;
-}
-
-.container {
-  padding-top: 100px;
 }
