--- a/bigbluebutton-html5/imports/ui/components/loading-screen/styles.css
+++ b/bigbluebutton-html5/imports/ui/components/loading-screen/styles.css
@@ -4,6 +4,7 @@ body{
   display: flex;
   flex-flow: column;
   justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   background-color: #ECF3FC;
@@ -12,10 +13,9 @@ body{
 .arrow-container{
   width: 300px;
   height: 300px;
-  margin-bottom: 1rem;
+  margin: 1rem;
   position: absolute;
   justify-content: center;
-  text-align: center;
   left: 0;
   right: 0;
 }
