--- a/bigbluebutton-html5/imports/ui/components/loading-screen/styles.css
+++ b/bigbluebutton-html5/imports/ui/components/loading-screen/styles.css
@@ -13,11 +13,10 @@ body{
 .arrow-container{
   width: 300px;
   height: 300px;
-  margin: 0;
+  margin: 0 auto;
   position: absolute;
   justify-content: center;
-  top: 0;
-  bottom: 0;
+  top: 50%;
   left: 0;
   right: 0;
 }
