--- a/bigbluebutton-html5/imports/ui/components/user-avatar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/user-avatar/styles.scss
@@ -43,7 +43,7 @@
     right: var(--user-indicators-offset);
     border: 1.5px solid var(--user-list-bg);
     border-radius: 50%;
-    background-color: var(--user-indicator-voice-bg);
+    //background-color: var(--user-indicator-voice-bg);
     color: var(--user-avatar-text);
     opacity: 0;
     font-family: 'bbb-icons';
