--- a/bigbluebutton-html5/imports/ui/components/user-avatar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/user-avatar/styles.scss
@@ -119,7 +119,7 @@
 
 .presenter {
   &:before {
-    content: "\00a0\e90b\00a0";
+    content: "\00a0\e93a\00a0";
   }
   @include presenterIndicator();
 }
