--- a/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
@@ -60,9 +60,9 @@
   padding: calc(var(--sm-padding-y) * 2.5) calc(var(--sm-padding-x) * 1.25);
   resize: none;
   transition: none;
-  border-radius: var(--border-radius);
+  border-radius: 15px;
   font-size: var(--font-size-base);
-  min-height: 2.5rem;
+  min-height: 1rem;
   max-height: 10rem;
   border: 1px solid var(--color-gray-lighter);
   box-shadow: 0 0 0 1px var(--color-gray-lighter);
