--- a/bigbluebutton-html5/client/stylesheets/bbb-icons.css
+++ b/bigbluebutton-html5/client/stylesheets/bbb-icons.css
@@ -140,7 +140,7 @@
 .icon-help:before {
   content: "\e924";
 }
-.icon-icon-audio_icon_blue:before {
+.icon-audio_icon_blue:before {
   content: "\e925";
   color: #25385d;
 }
