--- a/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
@@ -61,6 +61,7 @@
   resize: none;
   transition: none;
   border-radius: 20px;
+  border: transparent;
   font-size: var(--font-size-base);
   min-height: 0.75rem;
   max-height: 10rem;
