--- a/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
@@ -61,7 +61,7 @@
   resize: none;
   transition: none;
   border-radius: 20px;
-  border: transparent;
+  outline: none;
   font-size: var(--font-size-base);
   min-height: 0.75rem;
   max-height: 10rem;
