--- a/bigbluebutton-html5/imports/ui/components/user-avatar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/user-avatar/styles.scss
@@ -127,7 +127,8 @@
 
 .voice {
   &:after {
-    content: "\00a0\e931\00a0";
+    font-family: "icomoon";
+    content: "\00a0\e959\00a0";
     background-color: var(--user-indicator-voice-bg);
     top: 1.375rem;
     left: 1.375rem;
