--- a/bigbluebutton-html5/imports/ui/components/video-provider/video-list/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/video-provider/video-list/styles.scss
@@ -131,7 +131,7 @@
   }
 
   &::before {
-    content: "\e949";
+    content: "\e93f";
     /* ascii code for the ellipsis character */
     font-family: 'bbb-icons' !important;
     display: inline-block;
