--- a/bigbluebutton-html5/imports/ui/components/toast/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/toast/styles.scss
@@ -51,7 +51,7 @@
 }
 
 .icon {
-  align-self: flex-start;
+  align-self: center;
   margin: 0 var(--sm-padding-x) auto 0;
   width: var(--toast-icon-md);
   height: var(--toast-icon-md);
