--- a/bigbluebutton-html5/imports/ui/components/user-list/user-list-content/user-participants/user-list-item/user-name/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/user-list/user-list-content/user-participants/user-list-item/user-name/styles.scss
@@ -13,6 +13,12 @@
   }
 }
 
+.status {
+  position: absolute;
+  right: 0;
+  color: black;
+}
+
 .userNameMain {
   @extend %no-margin;
   font-size: 0.9rem;
